--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "bootstrap": "^4.3.0",
     "date-fns": "^1.30.1",
+    "moment": "^2.24.0",
     "react": "^16.8.1",
+    "react-big-calendar": "^0.20.3",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
