--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
     "bootstrap": "^4.3.0",
     "date-fns": "^1.30.1",
     "moment": "^2.24.0",
-    "react": "^16.8.1",
+    "react": "^16.8.6",
     "react-big-calendar": "^0.20.3",
     "react-bootstrap": "^1.0.0-beta.5",
-    "react-dom": "^16.8.1",
+    "react-dom": "^16.8.6",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
+    "reactstrap": "^8.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.85.0"
